--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -7,13 +7,51 @@
         android:layout_height="match_parent"
         tools:context=".WelcomeActivity">
 
+    <ImageView
+            android:layout_width="0dp"
+            android:layout_height="0dp" app:srcCompat="@drawable/welcomescreenbg"
+            android:id="@+id/imageView"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"/>
+    <ImageView
+            android:layout_width="110dp"
+            android:layout_height="50dp" app:srcCompat="@drawable/swooshlogo"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/imageView2"
+            app:layout_constraintTop_toTopOf="@+id/imageView" android:layout_marginTop="16dp"
+            android:scaleType="fitCenter"/>
+    <Button
+            android:text="GET STARTED"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="16dp" android:id="@+id/button" android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" android:fontFamily="@font/montserrat"
+            android:background="@drawable/swoosh_button" android:textColor="@android:color/white"/>
     <TextView
+            android:text="GO ALL IN"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/textView" android:textColor="@android:color/white" android:fontFamily="@font/montserrat"
+            android:textSize="46sp" android:layout_marginTop="80dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
+    <TextView
+            android:text="ON GOING ALL OUT"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView2"
+            android:textColor="@android:color/white" android:fontFamily="@font/montserrat" android:textSize="32sp"
+            app:layout_constraintTop_toBottomOf="@+id/textView" android:textStyle="bold"/>
+    <TextView
+            android:text="Find a team in your city, and dominate the league"
+            android:layout_width="193dp"
+            android:layout_height="44dp"
+            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:singleLine="false" android:textAlignment="center"
+            android:textColor="@android:color/white"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="32dp"
+            android:fontFamily="@font/montserrat"/>
 </android.support.constraint.ConstraintLayout>
