--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">#3f3f3f</item>
         <item name="colorPrimaryDark">#3f3f3f</item>
-        <item name="colorAccent">#fffff</item>
+        <item name="colorAccent">#ffffff</item>
     </style>
 
 </resources>
