--- a/app/src/main/res/layout/activity_desired.xml
+++ b/app/src/main/res/layout/activity_desired.xml
@@ -14,14 +14,14 @@
             app:layout_constraintEnd_toEndOf="parent" android:id="@+id/imageView3"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:scaleType="centerCrop"/>
+            android:scaleType="centerCrop" android:contentDescription="@string/background_image"/>
     <ImageView
             android:layout_width="110dp"
             android:layout_height="50dp" app:srcCompat="@drawable/swooshlogo"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:id="@+id/imageView2"
             app:layout_constraintTop_toTopOf="@+id/imageView" android:layout_marginTop="16dp"
-            android:scaleType="fitCenter"/>
+            android:scaleType="fitCenter" android:contentDescription="@string/app_logo"/>
 
     <Button
             android:text="NEXT"
@@ -47,26 +47,27 @@
             android:layout_marginStart="16dp" android:layout_marginTop="32dp"
             app:layout_constraintTop_toBottomOf="@+id/textView4">
         <ToggleButton
-                android:text="Men"
+                android:text="@string/men"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" tools:layout_editor_absoluteY="223dp"
                 app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-                android:id="@+id/toggleButton" android:textOn="Men" android:textOff="Men"
+                android:id="@+id/toggleButton" android:textOn="@string/men" android:textOff="@string/men"
                 android:fontFamily="@font/montserrat" android:textColor="@android:color/white"
                 android:background="@drawable/swoosh_toggle"/>
         <ToggleButton
-                android:text="Women"
+                android:text="@string/women"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" tools:layout_editor_absoluteY="307dp"
                 app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-                android:id="@+id/toggleButton2" android:textOff="Women" android:textOn="Women"
+                android:id="@+id/toggleButton2" android:textOff="@string/women" android:textOn="@string/women"
                 android:layout_marginTop="16dp" android:layout_marginBottom="16dp" android:fontFamily="@font/montserrat"
                 android:textColor="@android:color/white" android:background="@drawable/swoosh_toggle"/>
         <ToggleButton
-                android:text="Co-ed"
+                android:text="@string/co_ed"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/toggleButton4" android:textOff="Co-ed"
-                android:textOn="Co-ed" android:fontFamily="@font/montserrat" android:textColor="@android:color/white"
+                android:layout_height="wrap_content" android:id="@+id/toggleButton4" android:textOff="@string/co_ed"
+                android:textOn="@string/co_ed" android:fontFamily="@font/montserrat"
+                android:textColor="@android:color/white"
                 android:background="@drawable/swoosh_toggle"/>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
