--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -13,20 +13,21 @@
             android:id="@+id/imageView"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"/>
+            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
+            android:contentDescription="@string/background_image"/>
     <ImageView
             android:layout_width="110dp"
             android:layout_height="50dp" app:srcCompat="@drawable/swooshlogo"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:id="@+id/imageView2"
             app:layout_constraintTop_toTopOf="@+id/imageView" android:layout_marginTop="16dp"
-            android:scaleType="fitCenter"/>
+            android:scaleType="fitCenter" android:contentDescription="@string/app_logo"/>
     <Button
             android:text="GET STARTED"
             android:layout_width="0dp"
             android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginBottom="16dp" android:id="@+id/button" android:layout_marginStart="8dp"
+            android:layout_marginBottom="16dp" android:id="@+id/startBtn" android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp" android:fontFamily="@font/montserrat"
             android:background="@drawable/swoosh_button" android:textColor="@android:color/white"/>
     <TextView
