--- a/app/src/main/res/layout/activity_desired.xml
+++ b/app/src/main/res/layout/activity_desired.xml
@@ -28,9 +28,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginBottom="16dp" android:id="@+id/button" android:layout_marginStart="8dp"
+            android:layout_marginBottom="16dp" android:id="@+id/leagueBtn" android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp" android:fontFamily="@font/montserrat"
-            android:background="@drawable/swoosh_button" android:textColor="@android:color/white"/>
+            android:background="@drawable/swoosh_button" android:textColor="@android:color/white"
+            android:onClick="leagueClicked"/>
     <TextView
             android:text="Desired League:"
             android:layout_width="wrap_content"
