--- a/app/src/main/res/layout/activity_skill.xml
+++ b/app/src/main/res/layout/activity_skill.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".SkillActivity">
+        tools:context=".Controller.SkillActivity">
 
     <ImageView
             android:layout_width="0dp"
@@ -31,7 +31,8 @@
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginBottom="16dp" android:id="@+id/finishBtn" android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp" android:fontFamily="@font/montserrat"
-            android:background="@drawable/swoosh_button" android:textColor="@android:color/white"/>
+            android:background="@drawable/swoosh_button" android:textColor="@android:color/white"
+            android:onClick="finishClicked"/>
     <TextView
             android:text="@string/i_am_a"
             android:layout_width="wrap_content"
@@ -51,17 +52,17 @@
         <ToggleButton
                 android:text="@string/beginner"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/toggleButton3" android:layout_weight="1"
+                android:layout_height="wrap_content" android:id="@+id/beginnerBtn" android:layout_weight="1"
                 android:background="@drawable/swoosh_toggle" android:textColor="@android:color/white"
                 android:textOff="@string/beginner" android:textOn="@string/beginner" android:layout_marginEnd="16dp"
-                android:fontFamily="@font/montserrat"/>
+                android:fontFamily="@font/montserrat" android:onClick="beginnerClicked"/>
         <ToggleButton
                 android:text="@string/baller"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/toggleButton5" android:layout_weight="1"
+                android:layout_height="wrap_content" android:id="@+id/ballerBtn" android:layout_weight="1"
                 android:background="@drawable/swoosh_toggle" android:textColor="@android:color/white"
                 android:textOff="@string/baller" android:textOn="@string/baller" android:layout_marginStart="16dp"
-                android:fontFamily="@font/montserrat"/>
+                android:fontFamily="@font/montserrat" android:onClick="ballerClicked"/>
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
